
### Fixed Bugs

* Fixed the reading of IES files on system with not-US locale
* Fixed a problem with Python and Property objects initialized as double even if they were int
* Python Property object now consider int data type always as a 64 bit value
* Fixed a bug rendering black baked maps when using bump mapping and COMBINED type with BAKECPU rendering engine
* Fixed a bug when rendering caustics over volumes with Caustic cache (issue #533)
* Fixed a problem causing the initialization of multiple dataset accelerators in some case
* Fixed a problem with incorrect alpha AOV values (issue #536)
* Fixed a problem when using Add/Subtract textures with bump mapping (issue #689)
* GlossyCoating is now a delta material if the base material is
* Fixed a crash when editing light source emission
* Added a work around to pyluxcoretools with PySide2 causing a std::bad_cast
* Fixed a possible crash when editing a scene
* Fixed glTF export to work with Python base64.b64decode()

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.
* Light emitted by motion blurred triangle lights is approximated using the triangle area of time 0.0 (computing triangle area at runtime would be expansive) so it may be not totally accurate if the motion blur transformation include a scale.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe) and
[Intel C++ redistributable](https://software.intel.com/sites/default/files/managed/59/aa/ww_icl_redist_msi_2018.3.210.zip).